--- a/src/components/layout/ResizableHandle/styles.module.css
+++ b/src/components/layout/ResizableHandle/styles.module.css
@@ -5,6 +5,8 @@
   background: var(--border-color);
   touch-action: none;
   user-select: none;
+  position: relative;
+  z-index: 10;
 
   /* a11y focus */
   outline: none;
