add e/w-resize cursor when resizer is in collapsed state

--- a/src/components/layout/ResizableHandle/styles.module.css
+++ b/src/components/layout/ResizableHandle/styles.module.css
@@ -15,3 +15,11 @@
 .handle:focus {
   background: var(--text-secondary);
 }
+
+.collapsed-left {
+  cursor: e-resize;
+}
+
+.collapsed-right {
+  cursor: w-resize;
+}
